--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000" />
     
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>Seven</title>
   </head>
   <body>
